syntax = "proto3";

import "src/apps/grpc/proto/helpers/status.proto";

option go_package = "bm/src/apps/grpc/proto/article";

service Article{
  rpc GetArticles(Empty) returns (ArticleListResponse);
  rpc GetArticle(GetByIDReq) returns (stream ArticleResponse);
  rpc IncreaseBuyCount(stream GetByIDReq) returns (stream BuyCount);
}

message BuyCount {
  int64 ID = 1;
  int64 Count = 2;
  Status Status = 3;
  int64 Ok = 4;
}

message GetByIDReq {
  int64 ID = 1;
}

message Empty{

}

message ArticleResponse {
  int64 ID = 1;
  string Title = 2;
  string Body = 3;
  string Tags = 4;
  double Price = 5;
  int64 BuyCount = 6;
}

message ArticleListResponse{
  repeated ArticleResponse Articles = 1;
}
